--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@loadable/component": "^5.15.0",
     "copy-to-clipboard": "^3.3.1",
     "history": "^5.0.0",
-    "next": "^11.1.0",
     "js-search": "^2.0.0",
+    "next": "^11.1.0",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -28,6 +28,7 @@
     "@types/react-virtualized": "^9.21.12",
     "prettier": "^2.3.2",
     "prettier-plugin-organize-imports": "^2.3.3",
-    "prettier-plugin-pkg": "^0.10.0"
+    "prettier-plugin-pkg": "^0.10.0",
+    "typescript": "^4.4.2"
   }
 }
