--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   },
   "devDependencies": {
     "@types/js-search": "^1.4.0",
+    "@types/node": "^16.7.8",
+    "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/react-virtualized": "^9.21.12",
+    "@types/styled-components": "^5.1.13",
     "prettier": "^2.3.2",
     "prettier-plugin-organize-imports": "^2.3.3",
     "prettier-plugin-pkg": "^0.10.0",
