--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
     "copy-to-clipboard": "^3.3.1",
     "history": "^5.0.0",
     "js-search": "^2.0.0",
-    "next": "^11.1.0",
+    "next": "^11.1.2",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-virtualized": "^9.22.3",
     "styled-components": "^5.3.0",
-    "styled-icons": "^10.36.0"
+    "styled-icons": "10.41.0"
   },
   "devDependencies": {
     "@types/js-search": "^1.4.0",
-    "@types/node": "^16.7.8",
-    "@types/react": "^17.0.19",
+    "@types/node": "^16.9.6",
+    "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@types/react-virtualized": "^9.21.12",
-    "@types/styled-components": "^5.1.13",
-    "prettier": "^2.3.2",
+    "@types/styled-components": "^5.1.14",
+    "prettier": "^2.4.1",
     "prettier-plugin-organize-imports": "^2.3.3",
     "prettier-plugin-pkg": "^0.10.0",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.3"
   }
 }
